--- a/nextflow.config
+++ b/nextflow.config
@@ -7,6 +7,7 @@ process {
     executor = 'slurm'
     beforeScript = 'module load StdEnv/2023 ngstools samtools scipy-stack/2025a parasail/2.6.2 rust/1.85.0 clang/18.1.8 bcftools'
     cpus             = 4
+    queue =  "rrg-bourqueg-ad"
     memory          = 16.GB
     time            = '3h'
     resourceLimits = [
