--- a/nextflow.config
+++ b/nextflow.config
@@ -19,27 +19,32 @@ process {
         memory = 16.GB
         cpus = 4
         time = '1h'
+        queue = "rrg-bourqueg-ad"
     }
   
     withName: merge_bams {
         memory = 16.GB
         cpus = 8
-        time = '1h'    
+        time = '1h'
+        queue = "rrg-bourqueg-ad"    
     }
     withName: genotype_strkit {
         memory = 16.GB
         cpus = 4
-        time = '2h'    
+        time = '2h' 
+        queue = "rrg-bourqueg-ad"   
     }
     withName: mendelian_inheritance {
         memory = 16.GB
         cpus = 4
-        time = '2h'    
+        time = '2h'
+        queue = "rrg-bourqueg-ad"     
     }
     withName: targt_denovo {
         memory = 32.GB
         cpus = 8
-        time = '24h'    
+        time = '24h'
+        queue = "rrg-bourqueg-ad"     
     }
 }
 
