--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@ process {
     executor = 'slurm'
     beforeScript = 'module load StdEnv/2023 ngstools samtools scipy-stack/2025a parasail/2.6.2 rust/1.85.0 clang/18.1.8 bcftools'
     cpus             = 4
-    queue =  "rrg-bourqueg-ad"
+    clusterOptions = '--account=rrg-bourqueg-ad'
     memory          = 16.GB
     time            = '3h'
     resourceLimits = [
@@ -19,32 +19,32 @@ process {
         memory = 16.GB
         cpus = 4
         time = '1h'
-        queue = "rrg-bourqueg-ad"
+       
     }
   
     withName: merge_bams {
         memory = 16.GB
         cpus = 8
         time = '1h'
-        queue = "rrg-bourqueg-ad"    
+         
     }
     withName: genotype_strkit {
         memory = 16.GB
         cpus = 4
         time = '2h' 
-        queue = "rrg-bourqueg-ad"   
+         
     }
     withName: mendelian_inheritance {
         memory = 16.GB
         cpus = 4
         time = '2h'
-        queue = "rrg-bourqueg-ad"     
+          
     }
     withName: targt_denovo {
         memory = 32.GB
         cpus = 8
         time = '24h'
-        queue = "rrg-bourqueg-ad"     
+         
     }
 }
 
