--- a/nextflow.config
+++ b/nextflow.config
@@ -5,11 +5,21 @@ cleanup = false
 // Group name for resource allocation must be supplied as environment variable
 process {
     executor = 'slurm'
-    beforeScript = 'module load StdEnv/2023 ngstools samtools scipy-stack/2025a parasail/2.6.2 rust/1.85.0 clang/18.1.8 bcftools'
+    //beforeScript = 'module load StdEnv/2023 ngstools samtools scipy-stack/2025a parasail/2.6.2 rust/1.85.0 clang/18.1.8 bcftools'
     cpus             = 4
     clusterOptions = '--account=rrg-bourqueg-ad'
     memory          = 16.GB
     time            = '3h'
+    module = [
+        'StdEnv/2023',
+        'ngstools',
+        'samtools',
+        'scipy-stack/2025a',
+        'parasail/2.6.2',
+        'rust/1.85.0',
+        'clang/18.1.8',
+        'bcftools'
+    ]
     resourceLimits = [
             memory: 240.GB,
             cpus: 64,
@@ -23,9 +33,9 @@ process {
     }
   
     withName: merge_bams {
-        memory = 16.GB
-        cpus = 4
-        time = '3h'
+        memory = 32.GB
+        cpus = 8
+        time = '5h'
          
     }
     withName: genotype_strkit {
